--- a/client/src/components/SideDrawer.css
+++ b/client/src/components/SideDrawer.css
@@ -5,7 +5,7 @@
   transform: translateY(-50%);
   width: 300px;
   height: 70%;
-  background-color: white;
+  background-color: rgb(229, 226, 236);
   box-shadow: -2px 0 5px rgba(0,0,0,0.1);
   transition: right 0.3s ease-in-out;
   z-index: 1000;
